added comment endpoints
