# openapi.yml
@@ -18,6 +18,8 @@ tags:
     description: Related to recipes
   - name: user
     description: Related to users of Family Recipes
+  - name: comment
+    description: Related to comments of Family Recipe
 
 paths:
 
@@ -299,6 +301,81 @@ paths:
               schema:
                 $ref: "#/components/schemas/deleteRecipeRes"
 
+  /comment:
+    post:
+      tags:
+        - comment
+      summary: comment on a post
+      description: comment on post
+      operationId: postComment
+      requestBody:
+        $ref: "#/components/requestBodies/postComment"
+      responses:
+        '200':
+          description: successfully commented on post
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/postCommentRes"
+
+  /comment/p/{postId}:
+    parameters:
+      - name: postId
+        in: path
+        description: id of the post whose comments we want to get
+        required: true
+        schema:
+          type: integer
+          format: int64
+    get:
+      tags:
+        - comment
+      summary: get all comments of a post
+      description: get all comments of a post
+      operationId: getPostComments
+      responses:
+        '200':
+          description: successfully retrieved comments for post
+          content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/getPostCommentsRes"
+
+  /comment/{commentId}:
+    parameters:
+      - name: commentId
+        in: path
+        description: id of the comment that we want to get or delete
+        required: true
+        schema:
+          type: integer
+          format: int64
+    get:
+      tags:
+        - comment
+      summary: get a single comment
+      description: get a single comment by Id
+      operationId: getCommentById
+      responses:
+        '200':
+          description: successfully retrieved comment by id
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/getCommentByIdRes"
+    delete:
+      tags:
+        - comment
+      summary: delete a comment by Id
+      description: delete a comment by Id
+      operationId: deleteCommentById
+      responses:
+        '200':
+          description: successfully deleted comment by id
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/deleteCommentRes"
 
 
   /user/{username}:
@@ -407,6 +484,33 @@ paths:
 components:
 
   schemas:
+
+    comment:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 1234
+        author:
+          type: string
+          description: username of the poster
+          example: username1
+        content:
+          type: string
+          example: this is a comment
+        createdAt:
+          type: string
+          format: date-time
+        postId:
+          type: integer
+          format: int64
+          description: id of post on which comment is made
+          example: 1234
+        parentId:
+          type: integer
+          format: int64
+          example: 1234
 
     group:
       type: object
@@ -720,7 +824,71 @@ components:
           type: integer
           example: 1234
 
+    postCommentRes:
+      type: object
+      properties:
+        status:
+          type: integer
+          example: 200
+        id:
+          type: integer
+          example: 1234
+
+    deleteCommentRes:
+      type: object
+      properties:
+        status:
+          type: integer
+          example: 200
+        rowsAffected:
+          type: integer
+          example: 1
+
+    getCommentByIdRes:
+      type: object
+      properties:
+        status:
+          type: integer
+          example: 200
+        data:
+          $ref: "#/components/schemas/comment"
+
+
+    getPostCommentsRes:
+      type: object
+      properties:
+        status:
+          type: integer
+          example: 200
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/comment"
+
   requestBodies:
+    postComment:
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              author:
+                type: string
+                description: username of the poster
+                example: username1
+              content:
+                type: string
+                example: this is a comment
+              postId:
+                type: integer
+                format: int64
+                description: id of post on which comment is made
+                example: 1234
+              parentId:
+                type: integer
+                format: int64
+                example: 1234
+
 
     createRecipe:
       content:
